# TradingBot

./: .gitattributes  .gitignore  .replit  AGENTS.md  README.md  pyproject.toml  replit.md  requirements.txt  start.sh  trading_platform.db  trading_platform.db-journal  trading_platform.db-shm  trading_platform.db-wal
.github/workflows/: validate-scaffold.yml
.openclaw/: REFERENCE.md  project.template.json
agents/eth-liquidity-trader/: agent.md  config.json
backend/: IMPLEMENTATION_PLAN.md  README.md
backend/app/: main.py
backend/db/: schema.sql
backend/tests/: test_binance_api.py
chatgpt/binance_rest_smc/: README.md  WRITE_TEST.txt  backtest.py  collector.py  config.example.json  engine.py  install_pi.sh  run.sh  runner.py  storage.py
chatgpt/binance_rest_smc_v2/: README.md  collector.py  config.example.json  engine.py  install_pi.sh  runner.py  signals.py  storage.py
chatgpt/binance_rest_smc_v23/: README.md  backtest.py  config.example.json  engine.py  (+3 more)
configs/: profiles_latest.json
cron/: nightly_backtest.cron.example  scan_15m.cron.example  scan_1h.cron.example
data/: README.md
docs/: architecture.md  backtesting.md  journal.md  risk.md  sessions.md  strategy.md
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: export_config.py  import_config.py  post-merge.sh  usdc_full_pipeline.py  validate_scaffold.py
templates/: research_report_template.md  setup_checklist.md
tests/: test_api_backtest_helpers.py  test_backtesting.py  test_bot_pipeline.py  test_execution_service.py  test_risk_manager.py  test_signal_engine.py
(+119 files in other folders)
