[project]
name = "web-trading-platform"
version = "1.0.0"
description = "Standalone modular web trading platform inspired by OpenClaw architecture"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "sqlmodel>=0.0.22",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
